--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
           <div class="tabs-content">
             <div id="tab-1" data-tab-content class="active">
-              <div class="custom-slider-1">
+              <div class="custom-slider" data-init="false">
                 <img
                   src="https://cdn.pixabay.com/photo/2016/12/05/11/39/fox-1883658_960_720.jpg"
                 />
@@ -47,9 +47,8 @@
               </div>
             </div>
             <div id="tab-2" data-tab-content>
-              <div class="custom-slider-2">
+              <div class="custom-slider" data-init="false">
                 <img
-                  protect="true"
                   src="https://cdn.pixabay.com/photo/2016/11/14/04/45/elephant-1822636_960_720.jpg"
                 />
 
